assets/stylesheets/babble.scss
$default-chat-width: 300px;

#babble-icon-unread {
  i {
    transition: color ease-in-out 0.5s;
    color: $danger;
  }
}

#babble-file-input {
  display: none;
}

@media (min-width: 700px) and (max-width: 1500px) {
  #main-outlet {
    &.chat-active--left { margin-left: $default-chat-width; }
    &.chat-active--right { margin-right: $default-chat-width; }
  }
}

/* Dropdown styles */
.babble-sidebar {
  overflow: auto;
  width: $default-chat-width;
  min-width: $default-chat-width;
  transition: width ease-in-out 0.25s;
  max-width: 100%;
  background: $secondary;
  height: calc(100% - 64px);
  position: fixed;
  z-index: 50;
  bottom: 0;
  margin-top: 64px;
  box-shadow: 0 2px 2px $primary;
  &.expanded { width: 100% !important; }
  &.mobile {
    margin-top: 0 !important;
    height: 100vh !important;
  }
  &.babble-sidebar--right { right: 0; }
  &.babble-sidebar--left  { left: 0; }
}

.babble-title h4 {
  flex-grow: 1;
  -webkit-flex-grow: 1;
  padding: 0 10px;
  margin-bottom: 0;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.d-header .icons .babble-title [class^="fa fa-"] {
  font-size: 15px;
}

/* Post styles */
.babble-posts {
  margin: 0;
  width: 100%;
  overflow-x: hidden;
  overflow-y: auto;
}

.babble-post {
  list-style-type: none;
}

.babble-staged-post {
  opacity: 0.4;
}

.babble-load-more {
  text-align: center;
  border-bottom: 1px solid $primary;
  margin-bottom: 10px;
}

.babble-post-hr-message {
  border-bottom: 1px solid $primary;
  position: relative;
  bottom: 15px;
  margin-top: 10px;
  width: 100%;
  text-align: center;
  &.babble-last-read { margin-bottom: -10px; }
  > button {
    font-size: 13px;
    font-weight: bold;
    position: relative;
    top: 15px;
    padding: 4px 8px;
  }
  > span {
    margin: auto;
    position: relative;
    top: 10px;
    background: $secondary;
    padding: 0 10px;
    font-size: 11px;
    font-weight: bold;
    display: inline-block;
  }
}

.babble-empty-topic-message {
  text-align: center;
  padding: 25% 0;
}

.babble-avatar-wrapper {
  min-width: 40px;
  img {
    width: 32px;
    cursor: pointer;
  }
}

.babble-post-container {
  margin: 8px 0;
  position: relative;
  display: flex;

  &.babble-follow-on {
    margin: 4px 0;
    .babble-post-content-wrapper {
      flex-direction: row;
      -webkit-flex-direction: row;
      justify-content: space-between;
      -webkit-justify-content: space-between;
    }
    .babble-post-cooked {
      margin: 0;
    }

    .babble-post-meta-data {
      margin-top: -4px;
      order: 2;
    }
  }

  .babble-post-date {
    flex-grow: 1;
    -webkit-flex-grow: 1;
  }

  .babble-post-explainer {
    font-size: 12px;
    flex-grow: 10;
    -webkit-flex-grow: 10;
  }

  .babble-post-content-wrapper {
    display: flex;
    display: -webkit-flex;
    flex-direction: column;
    -webkit-flex-direction: column;
    flex-grow: 1;
    a.mention {
      display: inline;
      padding: 0;
    }
    p { margin: 0; }
    img {
      max-width: 100%;
      height: auto;
    }
  }

  .babble-post-meta-data {
    min-height: 26px;
    display: flex;
    display: -webkit-flex;
    flex-direction: row;
    -webkit-flex-direction: row;
    justify-content: space-between;
    -webkit-justify-content: space-between;
  }

  .babble-post-cooked {
    word-break: break-word;
  }

  .babble-post-actions-ellipsis i {
    margin: 5px 0 0 0 !important;
  }

  .babble-post-actions-menu {
    position: fixed;
    display: flex;
    flex-direction: column;
    z-index: 1;
    background: $secondary;
    box-shadow: 0 2px 2px $primary;
    .btn { display: flex; }
  }
}

.babble-sidebar .spinner {
  height: 10px;
  width: 10px;
  margin: 0 auto;
}

.babble-deleted-post {
  font-style: italic;
}

.babble-post-user-deleted {
  .babble-post-avatar, .babble-post-body, .post-date, .babble-post-actions button { opacity: 0.5 }
  .cooked { font-size: 11px; }
}

.babble-post-staff-deleted {
  display: none;
}

.babble-post-content .post-info {
  width: 32px;
  text-align: right;
}

/* Available topic styles */
.babble-available-topics {
  padding-top: 10px !important; /* sorry mom. */
  margin: 0;
  list-style-type: none;
  a { color: $primary; }
}

.babble-available-topic {
  transition: background 0.5s ease-in-out;
  line-height: 32px;
  display: flex;
  justify-content: space-between;
  flex-direction: row;
  align-items: center;
  cursor: pointer;
  font-weight: bold;
  padding: 0 10px;
  @media (max-width: 700px) {
    padding: 10px 20px;
  }
  &:hover {
    background: dark-light-diff($primary, $secondary, 90%, -65%);
  }
  a { flex-grow: 1; }
}

.babble-typing {
  text-align: right;
  font-size: 12px;
  line-height: 14px;
  min-height: 14px;
  padding: 5px 8px;
}

/* Composer styles */

.babble-post-composer {
  width: 100%;
  text-align: center;
  border-radius: 1px;
}

.babble-composer-wrapper {
  position: relative;
  flex-direction: row;
  box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.3);
  display: flex;
}

.babble-post-composer textarea {
  border: none;
  width: 100%;
  flex-grow: 1;
  min-height: 30px;
  margin: 0;
  box-shadow: inset 0 1px 4px rgba(0,0,0,0.3);
  padding: 4px 8px;
}

.babble-composer-actions {
  display: flex;
  display: -webkit-flex;
  flex-direction: column;
  -webkit-flex-direction: column;
}

.babble-composer-action {
  font-size: 20px;
  &:not(:hover) { background: none; }
}

.babble-post-composer .autocomplete {
  left: 15% !important;
  width: 70%;
  text-align: left;

  span.username {
    overflow: hidden;
    text-overflow: ellipsis;
    max-width: 60%;
  }

  span.name {
    float: right;
    width: inherit !important;
    max-width: 28%;
  }
}

.babble-no-one-is-typing {
  min-height: 15px;
}

.babble-is-typing {
  text-align: right;
  font-size: 12px;
  margin-right: 10px;
  a.trigger-user-card img {
    width: 15px;
    height: 15px;
    margin: 0 5px;
  }
}

.babble-sidebar {
  .normalized {
    border: none;
    width: 25px;
    height: 25px;
    padding: 0;
    margin: 0 5px;
    &:not(:hover) { background: none; }
  }

  .babble-chat {
    height: 100%;
    display: flex;
    display: -webkit-flex;
    flex-direction: column;
    -webkit-flex-direction: column;
  }
  .babble-title-wrapper {
    z-index: 1;
    box-shadow: 0 2px 2px rgba(0,0,0,0.25);
    border-radius: 1px;
    padding: 5px 0;
  }
  .babble-title {
    display: flex;
    -webkit-display: flex;
    flex-direction: row;
    -webkit-flex-direction: row;
    align-items: center;
    -webkit-align-items: center;
  }
  .babble-list {
    flex-grow: 1;
    -webkit-flex-grow: 1;
    overflow-x: hidden;
    overflow-y: scroll;
    -webkit-overflow-scrolling: touch;
    margin: 0 5px;
  }
  .babble-post-composer-wrapper {
    display: flex;
    flex-direction: row;
    align-items: flex-end;
    display: -webkit-flex;
    -webkit-flex-direction: row;
    -webkit-align-items: flex-end;
  }

  .spinner {
    width: 8px;
    height: 8px;
  }
}

/* Admin styles */
.babble-admin-disabled {
  font-weight: bold;
  text-align: center;
}

li.babble-chat.drop-container {
  margin: 0;
  display: inline-block;
  position: relative;
  .badge-category {
    padding: 6px 12px;
    width: 150px;
    display: inline-block;
    line-height: 18px;
  }
  .badge-category.category-dropdown-button {
    margin-left: -4px;
    padding: 6px 7px 6px 0;
    width: 6px;
  }
  .category-dropdown-menu {
    border: none;
    background: dark-light-diff($primary, $secondary, 90%, -65%);
    width: 100%;
    position: absolute;
    z-index: 3000;
    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.4);
    .cat {
      width: 100%;
    }
    .cat:first-of-type {
      display: none;
    }
    .cat:hover {
      background-color: dark-light-diff($primary, $secondary, 90%, -65%);
    }
    .badge-wrapper {
      display: block;
    }
  }
}

